# pwny-ci-cd

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: auto-tag.yml  ci.yml  deploy-fly.yml
docs/: pwny-weather-ci-cd-fly-guide-v3.docx
src/: main.rs
tests/: weather_parsing.rs
